--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>contact</title>
-</head>
-<body>
-    <h1>hi about</h1>
-</body>
+  </head>
+  <body>
+    <form>
+      <label for="fullname">نام و نام خانوادگی:</label>
+      <input type="text" id="fullname" name="fullname" /><br /><br />
+
+      <label for="email">ایمیل:</label>
+      <input type="email" id="email" name="email" /><br /><br />
+
+      <label for="massage">متن پیام:</label>
+      <textarea id="massage" name="massage"></textarea><br /><br />
+
+      <button type="submit">ارسال</button>
+    </form>
+
+    <table>
+      <caption>
+        جدول پیام ها
+      </caption>
+      <thead>
+        <tr>
+          <th>نام و نام خانوادگی</th>
+          <th>ایمیل</th>
+          <th>پیام</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>reza</td>
+          <td>reza@gmail.com</td>
+          <td>slm reza</td>
+        </tr>
+        <tr>
+          <td>rooham</td>
+          <td>rooham@gmail.com</td>
+          <td>slm rooham</td>
+        </tr>
+        <tr>
+          <td>ahmadreza</td>
+          <td>ahmadreza@gmail.com</td>
+          <td>slm ahmadreza</td>
+        </tr>
+        <tr>
+          <td>
+            <input />
+          </td>
+          <td>
+            <input />
+          </td>
+          <td>
+            <input />
+          </td>
+        </tr>
+      </tbody>
+      <tr></tr>
+    </table>
+  </body>
 </html>
