--- a/contact.html
+++ b/contact.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="contact.css" />
+    <script src="contactScript.js"></script>
     <title>contact</title>
   </head>
   <body>
-    <form>
+    <form id="contactForm" >
       <label for="fullname">نام و نام خانوادگی:</label>
       <input type="text" id="fullname" name="fullname" /><br /><br />
 
@@ -46,19 +48,7 @@
           <td>ahmadreza@gmail.com</td>
           <td>slm ahmadreza</td>
         </tr>
-        <tr>
-          <td>
-            <input />
-          </td>
-          <td>
-            <input />
-          </td>
-          <td>
-            <input />
-          </td>
-        </tr>
       </tbody>
-      <tr></tr>
     </table>
   </body>
 </html>
