--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </br>
 <a href='https://www.instagram.com/mjavadasadi.ir'>instagram</a>
 <a href='https://www.telegram.com/mjavadasadi'>telegram</a>
-<buttom onclick="changeDisciption()">change text</buttom>
+<buttom onclick="changeDisciption('black')">change text</buttom>
 <script src="./script.js"></script>
 
 </body>
