--- a/contact.html
+++ b/contact.html
@@ -10,16 +10,17 @@
   <body>
     <form id="contactForm">
       <label for="fullname">نام و نام خانوادگی:</label>
-      <input type="text" id="fullname" name="fullname" /><br /><br />
+      <input type="text" id="fullname" name="fullname" required/><br /><br />
 
       <label for="email">ایمیل:</label>
-      <input type="email" id="email" name="email" /><br /><br />
+      <input type="email" id="email" name="email" required/><br /><br />
 
       <label for="massage">متن پیام:</label>
-      <textarea id="massage" name="massage"></textarea><br /><br />
+      <textarea id="massage" name="massage" required></textarea><br /><br />
 
       <button type="submit">ارسال</button>
     </form>
+    <div id="confirmationMassage">پیام شما با موفقیت ارسال شد!</div>
 
     <table>
       <caption>
