--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
  
     <title>contact</title>
   </head>
-  <body>
+  <body id="contactBody">
     <form id="contactForm">
       <label for="fullname">نام و نام خانوادگی:</label>
       <input type="text" id="fullname" name="fullname" required/><br /><br />
@@ -18,7 +18,7 @@
       <label for="massage">متن پیام:</label>
       <textarea id="massage" name="massage" required></textarea><br /><br />
 
-      <button type="submit">ارسال</button>
+      <button type="submit" id="slm">ارسال</button>
     </form>
     <div id="confirmationMassage">پیام شما با موفقیت ارسال شد!</div>
 
